Fix small-screen overflowing/overlapping issues in cards

--- a/style/_components.scss
+++ b/style/_components.scss
@@ -96,6 +96,7 @@
 	@include pop-out(1);
 
 	background-color: white;
+	display: inline-block;
 	padding: 0.5ex 3ex;
 
 	&.primary {
